--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "abms",
-  "homepage": ".",
+  "homepage": "//www.dunningmarketing.com/abms/",
   "private": true,
   "version": "1.0.0",
   "engines": {
@@ -16,7 +16,6 @@
     "bootstrap": "5.1.3",
     "chalk": "4.1.0",
     "framer-motion": "6.2.8",
-    "gh-pages": "3.2.3",
     "google-map-react": "2.1.10",
     "html-react-parser": "1.4.8",
     "list-react-files": "0.2.0",
@@ -37,6 +36,7 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-config-react-app": "7.0.0",
     "eslint-plugin-prettier": "3.3.1",
+    "gh-pages": "3.2.3",
     "json-loader": "0.5.7",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
@@ -50,7 +50,9 @@
     "ltint": "eslint .",
     "lint:fix": "eslint --fix src/",
     "format": "prettier --write \"./src\"",
-    "run-all": "npm-run-all --parallel test lint:fix"
+    "run-all": "npm-run-all --parallel test lint:fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "development": [
