--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "abms",
-  "homepage": "//www.dunningmarketing.com/abms/",
+  "homepage": "//www.allbritishmotorshow.com",
   "private": true,
   "version": "1.0.0",
   "engines": {
@@ -19,6 +19,7 @@
     "google-map-react": "2.1.10",
     "html-react-parser": "1.4.8",
     "list-react-files": "0.2.0",
+    "prop-types": "15.8.1",
     "react": "17.0.1",
     "react-bootstrap": "2.2.0",
     "react-dom": "17.0.1",
@@ -31,11 +32,15 @@
     "styled-components": "5.3.3"
   },
   "devDependencies": {
-    "eslint": "8.11.0",
-    "eslint-config-airbnb": "18.2.1",
+    "eslint": "8.17.0",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.1.0",
     "eslint-config-react-app": "7.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-react-hooks": "4.6.0",
     "gh-pages": "3.2.3",
     "json-loader": "0.5.7",
     "lint-staged": "10.5.4",
@@ -51,7 +56,6 @@
     "lint:fix": "eslint --fix src/",
     "format": "prettier --write \"./src\"",
     "run-all": "npm-run-all --parallel test lint:fix",
-    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "browserslist": {
@@ -71,5 +75,8 @@
     "fs": false,
     "path": false,
     "os": false
-  }
+  },
+  "lint": "eslint .",
+  "lint:fix": "eslint --fix .",
+  "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
 }
