--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "abms",
-  "homepage": "//www.allbritishmotorshow.com",
+  "homepage": "/",
   "private": true,
   "version": "1.0.0",
   "engines": {
@@ -15,7 +15,7 @@
     "@testing-library/user-event": "12.6.2",
     "bootstrap": "5.1.3",
     "chalk": "4.1.0",
-    "framer-motion": "6.2.8",
+    "framer-motion": "4.1.17",
     "google-map-react": "2.1.10",
     "html-react-parser": "1.4.8",
     "list-react-files": "0.2.0",
@@ -27,6 +27,7 @@
     "react-icons": "4.3.1",
     "react-router": "6.2.2",
     "react-router-dom": "6.2.2",
+    "react-scripts": "5.0.1",
     "react-transition-group": "4.4.2",
     "sass": "1.49.9",
     "styled-components": "5.3.3"
@@ -45,8 +46,7 @@
     "json-loader": "0.5.7",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
-    "prettier": "2.2.1",
-    "react-scripts": "5.0.0"
+    "prettier": "2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,16 +59,15 @@
     "deploy": "gh-pages -d build"
   },
   "browserslist": {
-    "development": [
-      "last 2 chrome versions",
-      "last 2 firefox versions",
-      "last 2 edge versions"
-    ],
     "production": [
-      ">1%",
-      "last 4 versions",
-      "Firefox ESR",
-      "not ie < 11"
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   },
   "browser": {
