--- a/package.json
+++ b/package.json
@@ -8,13 +8,9 @@
     "npm": ">=6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "ltint": "eslint .",
-    "lint:fix": "eslint --fix src/",
-    "format": "prettier --write \"./src\"",
-    "run-all": "npm-run-all --parallel test lint:fix",
+    "dev": "vite --port 3000",
+    "build": "vite build",
+    "serve": "vite preview",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
@@ -29,6 +25,7 @@
     "google-map-react": "2.1.10",
     "html-react-parser": "1.4.8",
     "list-react-files": "0.2.0",
+    "path": "0.12.7",
     "prop-types": "15.8.1",
     "react": "17.0.1",
     "react-bootstrap": "2.2.0",
@@ -56,9 +53,9 @@
     "json-loader": "0.5.7",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "vite": "5.1.4"
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
