--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "vite --port 3000",
     "build": "vite build",
     "serve": "vite preview",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "lint": "eslint 'src/**/*.{js,ts,tsx}'"
   },
   "dependencies": {
     "@babel/eslint-parser": "7.17.0",
@@ -19,6 +20,7 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
+    "@vitejs/plugin-react": "4.2.1",
     "bootstrap": "5.1.3",
     "chalk": "4.1.0",
     "framer-motion": "4.1.17",
@@ -32,12 +34,16 @@
     "react-dom": "17.0.1",
     "react-error-overlay": "6.0.10",
     "react-icons": "4.3.1",
+    "react-responsive-carousel": "3.2.23",
     "react-router": "6.2.2",
     "react-router-dom": "6.2.2",
     "react-scripts": "5.0.1",
     "react-transition-group": "4.4.2",
     "sass": "1.49.9",
-    "styled-components": "5.3.3"
+    "styled-components": "5.3.3",
+    "vite-plugin-linter": "2.1.1",
+    "vite-plugin-svgr": "4.2.0",
+    "vite-tsconfig-paths": "4.3.1"
   },
   "devDependencies": {
     "eslint": "8.17.0",
