--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "vite --port 3000",
     "build": "vite build",
     "serve": "vite preview",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint 'src/**/*.{js,ts,tsx}'"
   },
   "dependencies": {
