Redeploy GitHub Pages with custom domain

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "abms",
-  "homepage": "/",
+  "homepage": "https://allbritishmotorshow.com",
   "private": true,
   "version": "1.0.0",
   "engines": {
