--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
-    "@vitejs/plugin-react": "4.2.1",
+    "@vitejs/plugin-react": "4.5.1",
     "bootstrap": "5.1.3",
     "chalk": "4.1.0",
     "framer-motion": "4.1.17",
@@ -37,19 +37,16 @@
     "react-responsive-carousel": "3.2.23",
     "react-router": "6.2.2",
     "react-router-dom": "6.2.2",
-    "react-scripts": "0.0.0",
     "react-transition-group": "4.4.2",
+    "rollup-plugin-visualizer": "6.0.3",
     "sass": "1.49.9",
     "styled-components": "5.3.3",
-    "vite-plugin-linter": "2.1.1",
-    "vite-plugin-svgr": "4.2.0",
-    "vite-tsconfig-paths": "4.3.1"
+    "vite-plugin-svgr": "4.3.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.1.0",
-    "eslint-config-react-app": "7.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "3.3.1",
