--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@vitejs/plugin-react": "4.5.1",
     "bootstrap": "5.1.3",
     "chalk": "4.1.0",
-    "framer-motion": "4.1.17",
+    "framer-motion": "12.16.0",
     "google-map-react": "2.1.10",
     "html-react-parser": "1.4.8",
     "list-react-files": "0.2.0",
@@ -34,6 +34,7 @@
     "react-dom": "17.0.1",
     "react-error-overlay": "6.0.10",
     "react-icons": "4.3.1",
+    "react-lazy-load-image-component": "1.6.3",
     "react-responsive-carousel": "3.2.23",
     "react-router": "6.2.2",
     "react-router-dom": "6.2.2",
