--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "vite --port 3000",
-    "build": "vite build",
+    "build": "vite build && tsc src/scripts/generate-sitemap.ts && node src/scripts/generate-sitemap.js",
     "serve": "vite preview",
     "deploy": "gh-pages -d dist",
     "lint": "eslint 'src/**/*.{js,ts,tsx}'"
@@ -20,31 +20,33 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
-    "@vitejs/plugin-react": "4.5.1",
+    "@vitejs/plugin-react": "4.5.2",
     "bootstrap": "5.1.3",
     "chalk": "4.1.0",
     "framer-motion": "12.16.0",
-    "google-map-react": "2.1.10",
-    "html-react-parser": "1.4.8",
+    "google-map-react": "2.2.5",
+    "html-react-parser": "5.2.5",
     "list-react-files": "0.2.0",
     "path": "0.12.7",
     "prop-types": "15.8.1",
-    "react": "17.0.1",
-    "react-bootstrap": "2.2.0",
-    "react-dom": "17.0.1",
+    "react": "18.3.1",
+    "react-bootstrap": "2.10.10",
+    "react-dom": "18.3.1",
     "react-error-overlay": "6.0.10",
-    "react-icons": "4.3.1",
+    "react-icons": "5.5.0",
     "react-lazy-load-image-component": "1.6.3",
     "react-responsive-carousel": "3.2.23",
-    "react-router": "6.2.2",
-    "react-router-dom": "6.2.2",
-    "react-transition-group": "4.4.2",
+    "react-router": "7.6.2",
+    "react-router-dom": "7.6.2",
+    "react-transition-group": "4.4.5",
     "rollup-plugin-visualizer": "6.0.3",
     "sass": "1.49.9",
     "styled-components": "5.3.3",
     "vite-plugin-svgr": "4.3.0"
   },
   "devDependencies": {
+    "@types/react": "18.3.23",
+    "@types/react-dom": "18.3.7",
     "eslint": "8.17.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.1.0",
@@ -58,6 +60,7 @@
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
+    "sitemap": "8.0.0",
     "vite": "6.3.5"
   },
   "browserslist": {
